# mik32-hal

./: .gitignore  Cargo.toml  app  app.hex
.cargo/: config.toml
src/: gpio.rs  main.rs  peripheral.rs  rcc.rs  serial.rs  time.rs  timer.rs  usart.rs
src/gpio/: convert.rs  emb_hal.rs  partially_erased.rs
src/timer/: delay.rs
