[package]
name = "riscv_app"
version = "0.1.0"
edition = "2024"

[dependencies]
mik32v2-pac = { git = "https://github.com/mik32-rs/mik32v2-pac" }
mik32-rt ={ git = "https://github.com/mik32-rs/mik32-rt.git"}
riscv = { version = "*", features = ["critical-section-single-hart"]}

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
